--- a/index.html
+++ b/index.html
@@ -6,5 +6,19 @@
     <title>Biju WH</title>
 </head>
 <body>
+    <header>
+        <nav class="header">
+            <img src="#"alt="logo">
+            <!--<li>imput text</li>-->
+            <ul>
+                <li>Anéis</li>
+                <li>Brincos</li>
+                <li>Colares</li>
+                <li>Pulseiras</li>
+                <li id="button">Carrinho</li>
+            </ul>
+            
+         </nav>
+    </header>
 </body>
 </html>
