--- a/index.html
+++ b/index.html
@@ -14,11 +14,60 @@
                 <li>Anéis</li>
                 <li>Brincos</li>
                 <li>Colares</li>
-                <li>Pulseiras</li>
-                <li id="button">Carrinho</li>
+                <li style=" border: none;">Pulseiras</li>
+                <li id="button" style=" border: none;">Carrinho</li>
             </ul>
-            
-         </nav>
+          </nav>
     </header>
+    <img class="banner" src="#" alt="banner">
+    <h1 >Beleza está nos olhos de quem vê...<hr></h1>
+    <nav class="images">
+        <ul>
+            <li>
+                <figure>
+                    <img src="images/modelo-argolas-pronto.webp" alt=""><figcaption>Descrição</figcaption>
+                </figure>
+                </li>
+            <li>
+                <figure>
+                    <img src="images/modelo-argolas-pronto.webp" alt=""><figcaption>Descrição</figcaption>
+                </figure>
+            </li>
+            <li>
+                </figure>
+                    <img src="images/modelo-argolas-pronto.webp" alt=""><figcaption>Descrição</figcaption>
+                </figure>
+            </li>
+        </ul>
+    </nav>
+    <hr>
+    <div>
+        <h1>Newsletter</h1>
+        <p>Para maiores informações e notificações de novo produtos, cadastre seu email.</p>
+        <!--*imput text-->
+    </div>
+    <hr>
+    <ul class="footer">
+       <li>
+           <figure>
+            <img src="#" alt="logo">
+            <p>Rua nome da rua - 1040, bairro nome do bairro - Pirapora</p>
+            </figure>
+        </li>
+        <li><!--class stars-->
+                <p>Dê-nos o seu feedback.</p><br>
+                <p>Fale conosco</p>
+                <a href="#"><img src="#" alt="facebook"></a>
+                <a href="#"><img src="#" alt="Instagram"></a>
+        </li>
+        <li>
+            <ul class="menu-end">
+                <li>Anéis</li>
+                <li>Brincos</li>
+                <li>Colares</li>
+                <li>Pulseiras</li>
+            </ul>
+        </li>
+    </ul>
 </body>
 </html>
