fixing some bugs

--- a/index.html
+++ b/index.html
@@ -7,57 +7,55 @@
     <title>Biju WH</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="menu">
+    <header >
+            <nav class="menu">
                 <a href=""><img class="logo" src="images/logo-bijuWH.png" alt="logo"></a>
-                
-                <input type="text" placeholder="Buscar..."/>
-                <img src="" alt="Buscar"/>
-            
+                <div class="barra">
+                    <input type="text" placeholder="Buscar..."/>
+                    <img src="" alt="Buscar"/>
+                </div> 
                 <ul class="right">
                     <li><a href="">Anéis</a></li>
                     <li><a href="">Brincos</a></li>
                     <li><a href="">Colares</a></li>
-                    <li><a href="">Pulseiras</a></li>
+                    <li class="none"><a href="">Pulseiras</a></li>
                 </ul>
-            </div>
-        </nav>
+            </nav>
     </header>
 
     <section>
-        <article>
+        <article class="banner">
             <img src="" alt="banner">
         </article>
     </section>
 
     <section>
         <article>
-            <h1>Beleza está nos olhos de quem vê...</h1>
+            <h1>Beleza está nos olhos de quem vê</h1>
             <hr>
         </article>
     </section>
 
-    <section>
+    <section class="images">
         <article>
             <ul>
                 <li>
                     <figure>
-                        <img src="images/modelo-argolas-pronto.webp" alt="">
+                        <img src="" alt="">
                         <figcaption>Descrição</figcaption>
                     </figure>
                 </li>
 
                 <li>
                     <figure>
-                        <img src="images/modelo-argolas-pronto.webp" alt="">
+                        <img src="" alt="">
                         <figcaption>Descrição</figcaption>
                     </figure>
                 </li>
 
                 <li>
                     </figure>
-                        <img src="images/modelo-argolas-pronto.webp" alt="">
+                        <img src="" alt="">
                         <figcaption>Descrição</figcaption>
                     </figure>
                 </li>
