ending index header

--- a/index.html
+++ b/index.html
@@ -8,30 +8,38 @@
 </head>
 <body>
     <header >
-            <nav class="menu">
-                <a href=""><img class="logo" src="images/logo-bijuWH.png" alt="logo"></a>
-                <div class="barra">
-                    <input type="text" placeholder="Buscar..."/>
-                    <img src="" alt="Buscar"/>
-                </div> 
-                <ul class="right">
-                    <li><a href="">Anéis</a></li>
-                    <li><a href="">Brincos</a></li>
-                    <li><a href="">Colares</a></li>
-                    <li class="none"><a href="">Pulseiras</a></li>
-                </ul>
-            </nav>
+        <nav class="menu">
+            <a href="index.html"><img class="logo" src="images/logo-bijuWH.png" alt="logo"></a>
+            <div class="barra">
+                <input type="text" placeholder="Buscar..."/>
+                <a href="#"><img class="icons-img" src="images/lupa-logo.webp" alt="Buscar"/></a>
+            </div> 
+            <ul class="right">
+                <li><a href="">Anéis</a></li>
+                <li><a href="">Brincos</a></li>
+                <li><a href="">Colares</a></li>
+                <li><a href="">Pulseiras</a></li>
+                <li>
+                    <a class="carrinho" href="#">
+                        <span>
+                            <img class="icons-img" src="images/carrinho-logo.webp" alt="carrinho"> 
+                            Carrinho
+                        </span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <section>
-        <article class="banner">
-            <img src="" alt="banner">
+        <article>
+            <img class="banner" src="images/banner.png" alt="banner">
         </article>
     </section>
 
-    <section>
+    <section class="frase-principal">
         <article>
-            <h1>Beleza está nos olhos de quem vê</h1>
+            <h1>Beleza está nos olhos de quem vê...</h1>
             <hr>
         </article>
     </section>
@@ -39,23 +47,23 @@
     <section class="images">
         <article>
             <ul>
-                <li>
+                <li class="align-img">
                     <figure>
-                        <img src="" alt="">
+                        <img class="center-img" src="images/modelo-argolas-pronto.webp" alt="argola">
                         <figcaption>Descrição</figcaption>
                     </figure>
                 </li>
-
-                <li>
+                
+                <li class="align-img">
                     <figure>
-                        <img src="" alt="">
+                        <img class="center-img" src="images/modelo-colar.jpg" alt="colar">
                         <figcaption>Descrição</figcaption>
                     </figure>
                 </li>
-
-                <li>
-                    </figure>
-                        <img src="" alt="">
+                
+                <li class="align-img">
+                    <figure>
+                        <img class="center-img" src="images/pulsiera-safira.jpeg" alt="pulsiera-safira">
                         <figcaption>Descrição</figcaption>
                     </figure>
                 </li>
@@ -83,8 +91,8 @@
              <li><!--class stars-->
                      <p>Dê-nos o seu feedback.</p><br>
                      <p>Fale conosco</p>
-                     <a href="#"><img src="#" alt="Facebook"></a>
-                     <a href="#"><img src="#" alt="Instagram"></a>
+                     <a href="#"><img class="icons-img" src="images/facebook-logo.webp" alt="Facebook"></a>
+                     <a href="#"><img class="icons-img" src="images/instagram-logo.webp" alt="Instagram"></a>
              </li>
              <li>
                  <ul class="menu">
