--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Biju WH</title>
 </head>
 <body>
-    <header >
+    <header>
         <nav class="menu">
             <a href="index.html"><img class="logo" src="images/logo-bijuWH.png" alt="logo"></a>
             <div class="barra">
@@ -70,16 +70,23 @@
             </ul>
         </article>
     </section>
-    <hr> 
-    <div>
-        <section class="news">           
-            <h2 class="nl">Newsletter</h2>
-            <p class="nlt">Para maiores informações e notificações de<br> novo produtos, cadastre seu email.</p>
-        </section>
 
-        <!--Colocar imput pro email-->
+    <section>
+        <article>
+            <hr>
+        </article>
+    </section>    
 
-    </div>
+    <section class="news">           
+        <h2>Newsletter</h2>
+        <h3 class="nlt">Para maiores informações e notificações de <br> novo produtos, cadastre seu email.</h3>   
+
+        <form class="form" action="index.html" method="GET">
+            <input type="text" name="nl" id="nl" placeholder="Endereço de Email">
+            <input type="submit" value="Inscreva-se">
+        </form>
+      
+    </section>
 
     <footer>
         <ul>
