--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <input type="text" placeholder="Buscar..."/>
                 <a href="#"><img class="icons-img" src="images/lupa-logo.webp" alt="Buscar"/></a>
             </div> 
-            <ul class="right">
+            <ul>
                 <li><a href="">Anéis</a></li>
                 <li><a href="">Brincos</a></li>
                 <li><a href="">Colares</a></li>
@@ -88,31 +88,25 @@
       
     </section>
 
-    <footer>
+    <footer class="footer">           
+        <figure>
+            <a href="index.html"><img class="logo" src="images/logo-bijuWH.png" alt="logo"></a>
+            <h3 class="footer-text">Rua das portas, 1040 <br/> Centro - Pirapora</h3>
+        </figure>
+
+        <div><!--class stars-->
+            <p class="footer-text-contato">Dê-nos o seu feedback.</p>
+            <p class="footer-text-contato">Fale conosco</p>
+            <a href="#"><img class="social-img" src="images/facebook-logo.webp" alt="Facebook"></a>
+            <a href="#"><img class="social-img" src="images/instagram-logo.webp" alt="Instagram"></a>
+        </div>
+
         <ul>
-            <li>
-                <figure class="left">
-                    <a href=""><img class="logo" src="images/logo-bijuWH.png" alt="logo"></a>
-                    <p>Rua nome da rua - 1040,<br> bairro nome do bairro - Pirapora</p>
-                </figure>
-             </li>
-             <li>
-                 <div class="center"><!--class stars-->
-                    <p class="fb">Dê-nos o seu feedback.</p><br>
-                    <p class="fc">Fale conosco</p>
-                    <a href="#"><img class="icons-img" src="images/facebook-logo.webp" alt="Facebook"></a>
-                    <a href="#"><img class="icons-img" src="images/instagram-logo.webp" alt="Instagram"></a>
-                </div>
-             </li>
-             <li class="right">
-                 <ul>
-                    <li><a href="">Anéis</a></li>
-                    <li><a href="">Brincos</a></li>
-                    <li><a href="">Colares</a></li>
-                    <li><a href="">Pulseiras</a></li>
-                 </ul>
-             </li>
-         </ul>
+            <li><a href="">Anéis</a></li>
+            <li><a href="">Brincos</a></li>
+            <li><a href="">Colares</a></li>
+            <li><a href="">Pulseiras</a></li>
+        </ul>
     </footer>
 </body>
 </html>
