--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
         </nav>
     </header>
 
-    <section>
+    <section class="images">
         <article>
-            <img class="banner" src="images/banner.png" alt="banner">
+            <div>
+                <img class="banner" src="images/banner.png" alt="banner">
+            </div>
+            
         </article>
     </section>
 
@@ -86,14 +89,17 @@
             <h3 class="footer-text">Rua das portas, 1040 <br/> Centro - Pirapora</h3>
         </figure>
 
-        <div><!--class stars-->
+        <div>
+            <!--class stars-->
             <p class="footer-text-contato">Dê-nos o seu feedback.</p>
             <p class="footer-text-contato">Fale conosco</p>
-            <a href="#"><img class="social-img" src="images/facebook-logo.webp" alt="Facebook"></a>
-            <a href="#"><img class="social-img" src="images/instagram-logo.webp" alt="Instagram"></a>
+            <div class="social-div">
+                <a class="social-link" href="#"><img class="social-img" src="images/facebook-logo.webp" alt="Facebook"></a>
+                <a class="social-link" href="#"><img class="social-img" src="images/instagram-logo.webp" alt="Instagram"></a>
+            </div>            
         </div>
 
-        <ul>
+        <ul class="menu-footer">
             <li><a href="">Anéis</a></li>
             <li><a href="">Brincos</a></li>
             <li><a href="">Colares</a></li>
