--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             </div> 
 
             <ul>
-                <li><a href="">Anéis</a></li>
-                <li><a href="">Brincos</a></li>
-                <li><a href="">Colares</a></li>
-                <li><a href="">Pulseiras</a></li>
+                <li><a href="aneis.html">Anéis</a></li>
+                <li><a href="brincos.html">Brincos</a></li>
+                <li><a href="colares.html">Colares</a></li>
+                <li><a href="pulseiras.html">Pulseiras</a></li>
                 <li>
                     <a class="carrinho" href="#">
                         <span>
@@ -116,10 +116,10 @@
         <div class="box"></div><div class="box linha-vertical"></div>
 
         <ul>
-            <li><a href="">Anéis</a></li>
-            <li><a href="">Brincos</a></li>
-            <li><a href="">Colares</a></li>
-            <li><a href="">Pulseiras</a></li>
+            <li><a href="aneis.html">Anéis</a></li>
+            <li><a href="brincos.html">Brincos</a></li>
+            <li><a href="colares.html">Colares</a></li>
+            <li><a href="pulseiras.html">Pulseiras</a></li>
         </ul>
     </footer>
 </body>
