adding new files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style_index.css" />
     <title>Biju WH</title>
 </head>
 <body>
@@ -19,10 +19,10 @@
             </div> 
 
             <ul>
-                <li><a href="aneis.html">Anéis</a></li>
-                <li><a href="brincos.html">Brincos</a></li>
-                <li><a href="colares.html">Colares</a></li>
-                <li><a href="pulseiras.html">Pulseiras</a></li>
+                <li><a href="categorias/aneis.html">Anéis</a></li>
+                <li><a href="categorias/brincos.html">Brincos</a></li>
+                <li><a href="categorias/colares.html">Colares</a></li>
+                <li><a href="categorias/pulseiras.html">Pulseiras</a></li>
                 <li>
                     <a class="carrinho" href="#">
                         <span>
@@ -116,10 +116,10 @@
         <div class="box"></div><div class="box linha-vertical"></div>
 
         <ul>
-            <li><a href="aneis.html">Anéis</a></li>
-            <li><a href="brincos.html">Brincos</a></li>
-            <li><a href="colares.html">Colares</a></li>
-            <li><a href="pulseiras.html">Pulseiras</a></li>
+            <li><a href="categorias/aneis.html">Anéis</a></li>
+            <li><a href="categorias/brincos.html">Brincos</a></li>
+            <li><a href="categorias/colares.html">Colares</a></li>
+            <li><a href="categorias/pulseiras.html">Pulseiras</a></li>
         </ul>
     </footer>
 </body>
