--- a/categorias/aneis.html
+++ b/categorias/aneis.html
@@ -42,7 +42,7 @@
         </article>
     </section>
 
-    <section class="frase-central">
+    <section class="frase-principal-2">
         <article>
             <h2>Mais vendidos</h2>
         </article>
@@ -67,9 +67,9 @@
         </article>
     </section>
 
-    <section>
+    <section class="hr-1">
         <article>
-            <hr class="hr-center">
+            <hr>
         </article>
     </section>
 
@@ -92,13 +92,39 @@
         </article>
     </section>
 
-    <section class="todos-produtos">
+    <section class="flex">
         <article>
-            <h3>Todos os produtos</h3>
-            <a href="$"><img src="#" alt="todos os produtos"></a>
+            <p class="todos-produtos-text"> Todos os produtos </p>
+            <p class="todos-produtos-text"><a href="#"><img class="icons-img" src="../images/todos-produtos.png" alt="todos os produtos"></a></p>
         </article>
     </section>
 
+    <section>
+        <article>
+            <hr>
+        </article>
+    </section>
+
+    <section class="garantia">
+        <article>
+            <div>
+                <h2>Garantia</h2>
+                <hr>
+            </div>
+
+            <div>
+               <h3 class="garantia-text">
+                    Nossa loja assegura que seu produto seja entregue conforme
+                    as especificações de compra. Caso não seja cumprido o acordo,
+                    a garantia da loja será acionada.
+                </h3>
+            </div>
+
+            <div>
+                <a class="contato" href="../contato/form.html"><span>Fale Conosco</span></a>
+            </div>
+        </article>
+    </section>
     <footer>           
         <figure>
             <a href="../index.html"><img class="logo" src="../images/logo-bijuWH.png" alt="logo"></a>
