finished products category

--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
     <section class="flex">
         <article>            
             <figure>
-                <img class="center-img" src="images/modelo-argolas-pronto.png" alt="argola">
+               <a href="produtos/detalhes.html"><img class="center-img" src="images/produtos/aneis/2.jpg" alt=""></a>
                 <figcaption>Argolas<br>R$ 10,99</figcaption>
             </figure>       
         
             <figure>
-                <img class="center-img" src="images/modelo-colar.jpg" alt="colar">
+                <img class="center-img" src="images/produtos/pulseiras/2.jpg" alt="">
                 <figcaption>Colar Azul<br>R$ 9,99</figcaption>
             </figure>        
         
             <figure>
-                <img class="center-img" src="images/pulsiera-safira.jpeg" alt="pulsiera-safira">
+                <img class="center-img" src="images/produtos/pulseiras/4.jpg" alt="">
                 <figcaption>Pulseira metalica, safira<br>R$ 11,99</figcaption>
             </figure> 
         </article>
