changing file structure

--- a/categorias/aneis.html
+++ b/categorias/aneis.html
@@ -35,21 +35,21 @@
         </nav>
     </header>
 
-    <section class="frase-principal">
-        <article>
+    <article>
+        <section class="frase-principal">
             <h1>Presenteie quem você ama</h1>
             <hr>
-        </article>
-    </section>
+        </section>
+    </article>
 
-    <section class="frase-principal-2">
-        <article>
+    <article>
+        <section class="frase-principal-2">
             <h2>Mais vendidos</h2>
-        </article>
-    </section>
+        </section>
+    </article>
 
-    <section class="flex">
-        <article>            
+    <article>            
+        <section class="flex">
             <figure>
                 <a href="#">
                     <img class="center-img" src="../images/produtos/aneis/1.jpg" alt="Anel Orelhas de gato">
@@ -70,17 +70,15 @@
                 </a>
                 <figcaption>Anel de Galhos banhada a ouro<br>R$ 35,99</figcaption>
             </figure> 
-        </article>
-    </section>
+        </section>
+    </article>
 
-    <section class="hr-1">
-        <article>
-            <hr>
-        </article>
-    </section>
+    <div class="hr-1">
+        <hr>
+    </div>
 
-    <section class="flex">
-        <article>            
+    <article>            
+        <section class="flex">
             <figure>
                 <a href="#">
                     <img class="center-img" src="../images/produtos/aneis/4.jpg" alt="Coração Banhado a ouro">
@@ -101,24 +99,22 @@
                 </a>
                 <figcaption>Anel Fases da Lua banhado<br>R$ 17,99</figcaption>
             </figure> 
-        </article>
-    </section>
+        </section>
+    </article>
 
-    <section class="flex">
-        <article>
+    <article class="flex">
+        <section >
             <p class="todos-produtos-text"> Todos os produtos </p>
             <p class="todos-produtos-text"><a href="#"><img class="icons-img" src="../images/todos-produtos.png" alt="todos os produtos"></a></p>
-        </article>
-    </section>
+        </section>
+    </article>
 
-    <section>
-        <article>
-            <hr>
-        </article>
-    </section>
+    <div>
+        <hr>
+    </div>
 
-    <section class="garantia">
-        <article>
+    <article class="garantia">
+        <section>
             <div>
                 <h2>Garantia</h2>
                 <hr>
@@ -135,8 +131,9 @@
             <div>
                 <a class="contato" href="../contato/form.html"><span>Fale Conosco</span></a>
             </div>
-        </article>
-    </section>
+        </section>
+    </article>
+
     <footer>           
         <figure>
             <a href="../index.html"><img class="logo" src="../images/logo-bijuWH.png" alt="logo"></a>
