--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
         </nav>
     </header>
 
-    <section class="flex">
-        <article>
+    <article>
+        <section class="flex">
             <figure>
                 <img class="banner" src="images/banner.png" alt="banner">
             </figure>            
-        </article>
-    </section>
+        </section>
+    </article>
 
-    <section class="frase-principal">
-        <article>
+    <article>
+        <section class="frase-principal">
             <h1>Beleza está nos olhos de quem vê...</h1>
             <hr>
-        </article>
-    </section>
+        </section>
+    </article>
 
-    <section class="flex">
-        <article>            
+    <article>            
+        <section class="flex">
             <figure>
                 <a href="produtos/detalhes.html">
                     <img class="center-img" src="images/produtos/aneis/2.jpg" alt="Anel de Coração">
@@ -72,17 +72,15 @@
                 </a>
                 <figcaption>Pulseira aberta<br>R$ 19,99</figcaption>
             </figure> 
-        </article>
-    </section>
+        </section>
+    </article>
 
-    <section>
-        <article>
-            <hr>
-        </article>
-    </section>    
+    <div>
+        <hr>
+    </div>    
 
-    <section class="news">
-        <article>
+    <article>
+        <section class="news">
             <div>
                 <h2>Newsletter</h2>
                 <h3 class="nlt">Para maiores informações e notificações de <br> novo produtos, cadastre seu email.</h3>   
@@ -92,8 +90,8 @@
                 <input type="text" name="nl" id="nl" placeholder="Endereço de Email">
                 <input type="submit" value="Inscreva-se">
             </form>
-        </article>
-    </section>
+        </section>
+    </article>
 
     <footer>           
         <figure>
