--- a/contato/form.html
+++ b/contato/form.html
@@ -42,7 +42,7 @@
     </article>
 
     <article>
-        <section>
+        <section class="flex">
             <form class="form" action="" method="POST">
                 <label for="nome">Nome</label>
                 <input type="text" name="nome" id="nome" placeholder="Seu nome">
@@ -53,7 +53,7 @@
                 <label for="assunto">Assunto</label>
                 <input type="text" name="assunto" id="assunto" placeholder="Assunto">
 
-                <label for="descricao">Descricao</label>
+                <label for="descricao">Descrição</label>
                 <textarea name="descricao" id="descricao" cols="30" rows="10" placeholder="Descricao"></textarea>
 
                 <input type="submit" value="Enviar">
