--- a/produtos/detalhes.html
+++ b/produtos/detalhes.html
@@ -131,7 +131,7 @@
             </figure>
 
             <p class="footer-text-contato">Dê-nos o seu feedback.</p>
-            <p class="footer-text-contato-2">Fale conosco</p>
+            <a href="../contato/form.html" class="footer-text-contato-2"><p class="footer-text-contato-2">Fale conosco</p></a>
 
             <div class="social-div">
                 <a class="social-link" href="#"><img class="social-img" src="../images/facebook-logo.png" alt="Facebook"></a>
