--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </figure>
 
             <p class="footer-text-contato">Dê-nos o seu feedback.</p>
-            <a href="/contato/form.html" class="footer-text-contato-2"><p class="footer-text-contato-2">Fale conosco</p></a>
+            <a href="contato/form.html" class="footer-text-contato-2"><p class="footer-text-contato-2">Fale conosco</p></a>
 
             <div class="social-div">
                 <a class="social-link" href="http://www.facebook.com" target="_blank"><img class="social-img" src="images/facebook-logo.png" alt="facebook"></a>
