--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <article>            
         <section class="flex">
             <figure>
-                <a href="produtos/detalhes.html">
+                <a href="produtos/detalhes_1.html">
                     <img class="center-img" src="images/produtos/aneis/2.jpg" alt="Anel de Coração">
                 </a>
                 <figcaption>Anel de Coração<br>R$ 6,99</figcaption>
