--- a/produtos/detalhes_1.html
+++ b/produtos/detalhes_1.html
@@ -35,7 +35,7 @@
         </nav>
     </header>
 
-    <div>
+    <div class="hr">
         <hr>
     </div>
     
@@ -45,8 +45,8 @@
                 <img class="produto" src="../images/produtos/aneis/4.jpg" alt="">
             </figure>
 
-            <div>
-                <h1>Nome do produto</h1>
+            <div class="div">
+                <h1>Anel de Coração</h1>
                 <h3 class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos unde enim numquam omnis id ab deleniti vel eveniet quibusdam fugit, culpa sed quis soluta recusandae praesentium modi magnam deserunt provident.</h3>
 
                 <form class="form" action="" method="post">
@@ -79,7 +79,7 @@
         </section>
     </article>
 
-    <div>
+    <div class="hr">
         <hr>
     </div>
 
