adding login page

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h3 class="nlt">Para maiores informações e notificações de <br> novo produtos, cadastre seu email.</h3>   
             </div>        
     
-            <form class="form" action="contato/cadastro.html" method="POST">
+            <form class="form" action="contato/mensagem.html" method="POST">
                 <input type="text" name="nl" id="nl" placeholder="Endereço de Email">
                 <input type="submit" value="Inscreva-se">
             </form>
