adding button login

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
                 <li><a href="categorias/colares.html">Colares</a></li>
                 <li><a href="categorias/pulseiras.html">Pulseiras</a></li>
                 <li>
+                    <a class="login" href="autenticacao/autenticacao.html">
+                        <span>
+                            <img class="icons-img" src="images/login.png" alt="login">
+                            Login
+                        </span>
+                    </a>
+                </li>
+                <li>
                     <a class="carrinho" href="#">
                         <span>
                             <img class="icons-img" src="images/carrinho-logo.png" alt="carrinho"> 
